# dcd

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  build.rs
.githooks/: pre-commit
.github/actions/dcd-deploy/: Dockerfile  entrypoint.sh
.github/workflows/: ci.yml  example-deploy.yml  release.yml
dcd-deploy/: action.yml  entrypoint.sh
demo/: demo.tape  docker-compose.yml
demo/html/: index.html
homebrew-tap/: MAINTENANCE.md
homebrew-tap/Formula/: dcd.rb
src/: lib.rs  main.rs
src/cli/: analyze.rs  common.rs  destroy.rs  error.rs  mod.rs  parser.rs  status.rs  ui.rs  up.rs
src/composer/: detection.rs  engine.rs  errors.rs  mod.rs  types.rs
src/composer/config/: mod.rs  parser.rs  ports.rs  volumes.rs
src/composer/variables/: availability.rs  mod.rs  parser.rs  profiles.rs  validator.rs
src/deployer/: mod.rs  service.rs  types.rs
src/deployer/docker_manager/: error.rs  installer.rs  mod.rs  types.rs  validator.rs
src/deployer/firewall/: mod.rs  ufw.rs
src/deployer/sync/: env.rs  files.rs  mod.rs
src/executor/: error.rs  local_executor.rs  mod.rs  ssh_executor.rs  traits.rs  types.rs
tests/: integration_test.rs  test_ssh_key  test_ssh_key.pub
tests/common/: mod.rs
