[package]
name = "dcd"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["Sergei Varibrus"]
description = "Docker Compose Deployment tool for remote servers"
license = "MIT"
repository = "https://github.com/g1ibby/dcd"
readme = "README.md"
keywords = ["docker", "compose", "deployment", "devops", "ssh"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[profile.dev]
debug = 1
incremental = true

[dependencies]
russh = "0.52.1"
russh-sftp = "2.1.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = "0.7.14"
anyhow = "1.0.98"
async-trait = "0.1.88"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
regex = "1.11.1"
lazy_static = "1.5.0"
sha2 = "0.10.9"
semver = "1.0.26"
dirs = "6.0.0"
url = "2.5.4"
colored = "3.0.0"
indicatif = { version = "0.17.11", features = ["tokio"] }
dialoguer = "0.11.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
log = "0.4.27"
tabled = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
testcontainers = {version = "0.24.0", features = ["properties-config"]}

[features]
integration-tests = []
